# Ivorys

./: .gitignore  CMakeLists.txt  README.md  sample.txt
headers/: FileServer.h  Ivorys.h
src/: Client.cpp  FileServer.cpp  Ivorys.cpp
